# defendor

./: Cargo.toml  README.md
examples/: basic.rs  key.rs
src/: data.rs  defendor.rs  error.rs  key_manager.rs  key_store.rs  lib.rs  store.rs  utils.rs
src/biometric/: mod.rs  windows.rs
src/password/: mod.rs
