[package]
name = "defendor"
version = "0.0.3"
edition = "2024"
description = "A secure file encryption tool with AES-GCM and Argon2 for password hashing."
license = "Apache-2.0"
repository = "https://github.com/nashaofu/defendor.git"

[dependencies]
aes-gcm = { version = "0.10.3", features = ["std", "zeroize"] }
argon2 = { version = "0.5.3", features = ["std", "zeroize"] }
base64ct = "1.8.0"
tokio = { version = "1.45.1", features = ["fs"] }
serde_json = "1.0.140"
getrandom = { version = "0.3.3", features = ["std"] }
zeroize = { version = "1.8.1", features = ["derive"] }
secrecy = "0.10.3"
thiserror = "2.0.12"
serde = { version = "1.0.219", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros"] }
