[package]
name = "defendor"
version = "0.0.7"
edition = "2024"
description = "A secure file encryption tool with AES-GCM and Argon2 for password hashing."
license = "Apache-2.0"
repository = "https://github.com/nashaofu/defendor.git"

[features]
default = []
biometric = []

[dependencies]
aes-gcm = { version = "0.10.3", features = ["std", "zeroize"] }
argon2 = { version = "0.5.3", features = ["std", "zeroize"] }
base64ct = "1.8.3"
tokio = { version = "1.52.3", features = ["fs"] }
serde_json = "1.0.150"
getrandom = { version = "0.4.2", features = ["std"] }
zeroize = { version = "1.9.0", features = ["derive"] }
secrecy = "0.10.3"
thiserror = "2.0.18"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
  "Security_Credentials",
  "Security_Cryptography",
  "Storage_Streams",
] }
sha2 = "0.11.0"

[dev-dependencies]
tokio = { version = "1.52.3", features = ["full"] }
